# snivy

./: Cargo.toml  LICENSE  README.md
configs/: default.toml
src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  telemetry.rs
src/engine/: mod.rs  risk.rs  runner.rs
src/exchange/: info_client.rs  mod.rs  order_router.rs  position_manager.rs  ws_client.rs
src/marketdata/: events.rs  feeds.rs  indicators.rs  mod.rs
src/storage/: journal.rs  mod.rs  persistence.rs
src/strategies/: context.rs  mod.rs  registry.rs
src/strategies/ma_crossover/: mod.rs
src/utils/: math.rs  mod.rs  secrets.rs  time.rs
